--- a/07-advanced-retrieval.Rmd
+++ b/07-advanced-retrieval.Rmd
@@ -1,6 +1,7 @@
 # Advanced data retrieval
 
 ```{r}
+# Use tidycensus to extract tract-level data from Colorado and Utah on population (P001001) and rural population (P002005) based on 2000 decennial census; assigns data to object named "population_rural_CO_UT"
 population_rural_CO_UT<-get_decennial(geography = "tract",
                                       state=c("CO", "UT"),
                                       variables = c("P001001", "P002005"),
@@ -12,6 +13,7 @@ population_rural_CO_UT<-get_decennial(geography = "tract",
 ## Retrieving data from multiple census years
 
 ```{r, error=TRUE}
+# Attempts to extract state level data (for all US states) on population (P001001) and rural population (P002005) based on 2000 decennial census and 2010 decennial census, and assign to new object named "population_rural_2000_2010"
 population_rural_2000_2010<-get_decennial(geography = "state", 
                                          variables = c("P001001", "P002005"),
                                          output="wide",
@@ -22,7 +24,9 @@ population_rural_2000_2010<-get_decennial(geography = "state",
 ### Retrieving different census year datasets and placing them as separate elements in a list
 
 ```{r, message=F, warning=F}
-my_years<-c(2000,2010)
+
+# Creates function that takes a given year as an input, and uses tidycensus to extract a state-level dataset of population (P001001) and rural population (P002005) for the specified year; the output dataset also includes new columns containing the state's rural population as a percentage of the overall population ("rural_pct") and the year to which the data corresponds ("year"); the function is assigned to a new object named "census_query"
+
 census_query<-function(desired_year){
   get_decennial(geography = "state", 
                   variables = c("P001001", "P002005"),
@@ -32,31 +36,45 @@ census_query<-function(desired_year){
     mutate(year=desired_year)
 }
 
-population_rural_2000_2010_list<-map(.x=my_years, .f=census_query)
+# Test the "census_query" object for the year 2000
+census_query(2000)
 
-population_rural_2000_2010_list
-
-population_rural_2000_2010_list %>% pluck(1)
-
-names(population_rural_2000_2010_list)<-my_years
-
-population_rural_2000_2010_list
-
-population_rural_2000_2010_list %>% pluck("2010")
-
-population_rural_2000_2010_list[["2010"]]
-
-population_rural_2000_2010_list %>% pluck(2)
-
-population_rural_2000_2010_list[[2]]
 ```
 
+```{r}
+# Creates a new vector, assigned to an object named "my_years", containing the years for which we want to extract data
+my_years<-c(2000,2010)
+
+# Applies the "census_query" function to the inputs specified by the "my_years" vector, and deposits the two resulting datasets (one from 2000 and the other from 2010) as distinct elements in a list assigned to an object named population_rural_2000_2010_list
+population_rural_2000_2010_list<-map(.x=my_years, .f=census_query)
+
+# Prints the contents of "population_rural_2000_2010_list"
+population_rural_2000_2010_list
+
+# Extracts the first list element (the 2000 dataset) from the list using its index
+population_rural_2000_2010_list %>% pluck(1)
+
+# Names the list elements based on the input years (i.e. the years in "my_years")
+names(population_rural_2000_2010_list)<-my_years
+
+# prints "population_rural_2000_2010_list"; notice the list elements are now named after the years to which they correspond 
+population_rural_2000_2010_list
+
+# Extracts the 2010 dataset from "population_rural_2000_2010_list" using its newly assigned name
+population_rural_2000_2010_list %>% pluck("2010")
+
+# Note that even if a list element is named, you can still extract it using its index, rather than its name
+population_rural_2000_2010_list %>% pluck(2)
+
+```
 
 ### Retrieving different census year datasets and placing them in a single data frame
 
 ```{r, message=F, warning=F}
+# Applies the "census_query" function to the inputs specified by the "my_years" vector, and deposits the resulting census datasets (one from 2000 and the other from 2010) into a single data frame assigned to an object named "population_rural_2000_2010_df"
 population_rural_2000_2010_df<-map_dfr(.x=my_years, .f=census_query) %>% arrange(GEOID)
 
+# prints the first few records of "population_rural_2000_2010_df" 
 population_rural_2000_2010_df
 ```
 
