--- a/09-data-export.Rmd
+++ b/09-data-export.Rmd
@@ -1,8 +1,74 @@
 # Exporting R Objects
 
-## Writing out census datasets as CSV files 
+## Exporting a single object
 
-### Write out multiple census datasets stored a list to disk (in CSV format)
+### Exporting a single dataset to disk as a CSV file
+
+```{r}
+write_csv(state_population_2010, "state_population_2010.csv")
+```
+
+```{r}
+write_csv(state_population_2010, "/Users/adra7980/Documents/git_repositories/R_census/exported_objects/exported_datasets/state_population_2010.csv")
+```
+
+### Exporting a single map to disk as a png, jpeg, or PDF file with "tmap_save"
+
+```{r}
+median_age_CO_map
+```
+
+```{r}
+tmap_save(median_age_CO_map, "median_age_CO_map.png")
+```
+
+```{r}
+tmap_save(median_age_CO_map, "/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/median_age_CO_map.png")
+```
+
+```{r}
+tmap_save(median_age_CO_map, "/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/median_age_CO_map.pdf")
+```
+
+### Exporting a single ggplot visualization to disk as a png, jpeg, or PDF file with "ggsave"
+
+```{r}
+ggsave("CO_median_age_graph.png", median_age_CO_cleaned_visualization)
+```
+
+```{r}
+ggsave("/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/CO_median_age_graph.jpeg", median_age_CO_cleaned_visualization)
+```
+
+### Exporting a single ggplot or tmap visualization with a graphics device
+
+Exporting a single ```tmap``` visualization as a pdf file using a pdf device
+
+```{r}
+pdf("/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/CO_median_age_graph.pdf")
+median_age_CO_map
+dev.off()
+```
+
+Exporting a single ```tmap``` visualization as a png file using a png device
+
+```{r}
+png("/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/CO_median_age_graph.png")
+median_age_CO_map
+dev.off()
+```
+
+Exporting a single ```ggplot``` visualization as a jpeg file using a jpeg device
+
+```{r}
+jpeg("/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/CO_median_age_graph.jpeg")
+median_age_CO_cleaned_visualization
+dev.off()
+```
+
+## Exporting multiple objects
+
+### Exporting multiple csv files stored in a list
 
 ```{r}
 population_rural_2000_2010_list_cleaned
@@ -15,12 +81,15 @@ writeout_function<-function(object, filename){
   write_csv(object, filename)
 }
 
-walk2(population_rural_2000_2010_list_cleaned, names(population_rural_2000_2010_list_cleaned), 
+filename_vector<-paste0("rural_pct_", names(population_rural_2000_2010_list_cleaned))
+filename_vector
+
+
+walk2(population_rural_2000_2010_list_cleaned, filename_vector, 
      writeout_function)
 ```
 
-
-### Write out multiple census datasets stored as separate objects to disk (in CSV format)
+### Exporting multiple csv files stored as separate objects in the global environment
 
 ```{r}
 state_total_2010<-get_decennial(geography="state", 
@@ -38,13 +107,16 @@ state_rural_2010<-get_decennial(geography = "state",
 # put objects to export in a named list
 objects_to_export<-lst(state_total_2010, state_rural_2010)
 
-walk2(objects_to_export, names(objects_to_export), writeout_function)
+# create filename vector
+filename_vector<-names(objects_to_export)
+
+# write out census datasets as CSV files
+walk2(objects_to_export, filename_vector, writeout_function)
 ```
 
+### Using a graphics device to export multiple objects from a list into a single PDF file
 
-## Writing out other objects (i.e. maps, visualizations etc.) to disk
-
-### Using plot devices to write out multiple maps to a single file
+Use PDF viewer to write out multiple ```tmap``` visualizations stored in a list to a single PDF file
 
 ```{r}
 pdf("/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/age_maps.pdf")
@@ -52,99 +124,18 @@ county_age_maps_list
 dev.off()
 ```
 
-### writing out multiple maps (PNG)
+Use PDF viewer to write out multiple ```ggplot``` visualizations stored in a list to a single PDF file
 
 ```{r}
-map_to_write_png<-function(map_object, map_name){
-  path<-"/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/"
-  filename<-paste0(path, map_name, "_age_map", ".png" )
-  tmap_save(map_object, filename)
-}
-
-map2(.x=county_age_maps_list, names(county_age_maps_list), .f=map_to_write_png)
-```
-
-### writing out multiple maps (PDF)
-
-```{r}
-map_to_write_pdf<-function(map_object, map_name){
-  path<-"/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/"
-  filename<-paste0(path, map_name, "_age_map", ".pdf" )
-  tmap_save(map_object, filename)
-}
-
-map2(.x=county_age_maps_list, names(county_age_maps_list), .f=map_to_write_pdf)
-```
-
-### generalizing function
-
-```{r}
-map_to_write<-function(map_object, map_name, extension){
-  path<-"/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/"
-  filename<-paste0(path, map_name, extension)
-  tmap_save(map_object, filename)
-}
-
-# create name vector
-listnames<-names(county_age_maps_list)
-mapnames<-paste0(listnames, "_age_map")
-
-# inputlist
-inputlist<-list(county_age_maps_list, mapnames, ".png")
-
-# writes png files
-pmap(inputlist, map_to_write)
-
-# inputlist
-inputlist<-list(county_age_maps_list, mapnames, ".jpeg")
-
-# writes jpeg files
-pmap(inputlist, map_to_write)
-
-```
-
-Use pdf viewer to write out multiple visualizations to a single pdf
-```{r}
-pdf("/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/age_viz.pdf")
+pdf("/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations/age_graphs.pdf")
 county_age_graphs_list
 dev.off()
 ```
 
-Write out ggplot visualizations as separate png files 
-```{r}
-# separate pngs
-plot_save<-function(plot, filename){
-  setwd("/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations")
-  filename_string<-paste0(filename, ".png")
-  png(filename_string)
-  print(plot)
-  dev.off()
-}
-
-
-walk2(county_age_graphs_list, names(county_age_graphs_list), plot_save)
-
-```
-
-
-Write out ggplot visualizations as separate pdf files 
+### Writing out multiple "tmap" or "ggplot" objects as separate files
 
 ```{r}
-# separate pdfs 
-plot_save<-function(plot, filename){
-  setwd("/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations")
-  filename_string<-paste0(filename, ".pdf")
-  pdf(filename_string)
-  print(plot)
-  dev.off()
-}
-
-walk2(county_age_graphs_list, names(county_age_graphs_list), plot_save)
-```
-
-
-```{r}
-plot_save_general<-function(plot, filename, extension){
+viz_save_general<-function(plot, filename, extension){
   setwd("/Users/adra7980/Documents/git_repositories/R_census/exported_objects/visualizations")
   filename_string<-paste0(filename, extension)
   if(extension==".pdf"){
@@ -162,10 +153,44 @@ print(plot)
 dev.off()
 }
 
-inputlist<-list(county_age_graphs_list, names(county_age_maps_list), ".jpeg")
-pmap(inputlist, plot_save_general)
-
 ```
+
+```{r}
+# writes out tmap objects from "county_age_maps_list" as separate jpeg files
+
+filenames<-paste0(names(county_age_maps_list), "_", "COUNTY_AGE_MAP")
+inputlist<-list(county_age_maps_list, filenames, ".jpeg")
+pwalk(inputlist, viz_save_general)
+```
+
+If you want PDFs of the maps in ```county_age_maps_list", then...
+
+```{r}
+# writes out tmap objects from "county_age_maps_list" as separate PDF files
+filenames<-paste0(names(county_age_maps_list), "_", "COUNTY_AGE_MAP")
+inputlist<-list(county_age_maps_list, filenames, ".pdf")
+pwalk(inputlist, viz_save_general)
+```
+
+We can use the same function (```viz_save_general```) to write out ```ggplot``` objects as separate files with a specified file extension. For example, to write out the graphs in ```county_age_graphs_list``` as PDFs:
+
+```{r}
+filenames<-paste0(names(county_age_graphs_list), "_", "COUNTY_AGE_GRAPH")
+inputlist<-list(county_age_graphs_list, filenames, ".pdf")
+pwalk(inputlist, viz_save_general)
+```
+
+To write out the graphs in ```county_age_graphs_list``` as png files, simply modify the file extension:
+
+```{r}
+filenames<-paste0(names(county_age_graphs_list), "_", "COUNTY_AGE_GRAPH")
+inputlist<-list(county_age_graphs_list, filenames, ".png")
+pwalk(inputlist, viz_save_general)
+```
+
+
+
+
 
 
 
